[i18n] normalize with i18n-tasks gem
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/helpers/de.yml
+++ b/config/locales/helpers/de.yml
@@ -1,9 +1,10 @@
+---
 de:
   helpers:
+    abort: Abbrechen
     confirmation:
-      delete: "Dieses Element wirklich löschen?"
+      delete: Dieses Element wirklich löschen?
+    delete: Löschen
     submit:
-      create: "Erstellen"
-      update: "Speichern"
-    abort: "Abbrechen"
-    delete: "Löschen"
+      create: Erstellen
+      update: Speichern
