--- a/config/locales/models/place/de.yml
+++ b/config/locales/models/place/de.yml
@@ -1,10 +1,11 @@
+---
 de:
   activerecord:
-    models:
-      place:
-        one: "Ort"
-        other: "Orte"
     attributes:
       place:
-        title: "Name"
-        notes: "Notizen"
+        notes: Notizen
+        title: Name
+    models:
+      place:
+        one: Ort
+        other: Orte
