--- a/config/locales/views/document/de.yml
+++ b/config/locales/views/document/de.yml
@@ -1,9 +1,10 @@
+---
 de:
   views:
     document:
-      none_selected: "kein Dokument ausgewählt"
       actions:
-        add_new_btn_title: "Neues Dokument hinzufügen"
+        add_new_btn_title: Neues Dokument hinzufügen
       modals:
         edit: "%{what} bearbeiten"
-        new: "Neues %{what} erstellen"
+        new: Neues %{what} erstellen
+      none_selected: kein Dokument ausgewählt
