--- a/config/locales/views/role/en.yml
+++ b/config/locales/views/role/en.yml
@@ -1,9 +1,10 @@
+---
 en:
   views:
     role:
-      none_selected: "no Role selected"
       actions:
-        add_new_btn_title: "add new Role"
+        add_new_btn_title: add new Role
       modals:
-        edit: "Edit %{what}"
-        new: "Create new %{what}"
+        edit: Edit %{what}
+        new: Create new %{what}
+      none_selected: no Role selected
