--- a/config/locales/models/content_translation/de.yml
+++ b/config/locales/models/content_translation/de.yml
@@ -1,11 +1,12 @@
+---
 de:
   activerecord:
-    models:
-      content_translation:
-        one: "Übersetzung"
-        other: "Übersetzungen"
     attributes:
       content_translation:
-        language: "Sprache"
-        translation: "Übersetzung"
-        notes: "Notizen"
+        language: Sprache
+        notes: Notizen
+        translation: Übersetzung
+    models:
+      content_translation:
+        one: Übersetzung
+        other: Übersetzungen
