--- a/config/locales/models/deed/de.yml
+++ b/config/locales/models/deed/de.yml
@@ -1,14 +1,15 @@
+---
 de:
   activerecord:
-    models:
-      deed:
-        one: "Urkunde"
-        other: "Urkunden"
     attributes:
       deed:
-        title: "Titel"
-        year: "Jahr"
-        month: "Monat"
-        day: "Tag"
-        description: "Beschreibung"
-        notes: "Notizen"
+        day: Tag
+        description: Beschreibung
+        month: Monat
+        notes: Notizen
+        title: Titel
+        year: Jahr
+    models:
+      deed:
+        one: Urkunde
+        other: Urkunden
