--- a/config/locales/models/person/de.yml
+++ b/config/locales/models/person/de.yml
@@ -1,15 +1,16 @@
+---
 de:
   activerecord:
-    models:
-      person:
-        one: "Person"
-        other: "Personen"
     attributes:
       person:
-        name: "Name"
-        gender: "Geschlecht"
-        notes: "Notizen"
+        gender: Geschlecht
         genders:
-          female: "weiblich"
-          male: "männlich"
-          unknown: "unbekannt"
+          female: weiblich
+          male: männlich
+          unknown: unbekannt
+        name: Name
+        notes: Notizen
+    models:
+      person:
+        one: Person
+        other: Personen
