--- a/config/locales/models/role/de.yml
+++ b/config/locales/models/role/de.yml
@@ -1,15 +1,16 @@
+---
 de:
   activerecord:
-    models:
-      role:
-        one: "Rolle"
-        other: "Rollen"
     attributes:
       role:
-        title: "Titel"
-        referring: "Bezug"
-        notes: "Notizen"
+        notes: Notizen
+        referring: Bezug
         refers_to:
-          person: "Person"
-          place: "Ort"
-          deed: "Urkunde"
+          deed: Urkunde
+          person: Person
+          place: Ort
+        title: Titel
+    models:
+      role:
+        one: Rolle
+        other: Rollen
