[view][control] cross-reference mentions
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -27,3 +27,4 @@ en:
     non_associated: "no linked"
     show_linked: "show linked %{what}"
     unknown: "unknown"
+    number_linked: "Number linked %{what}"
