--- a/config/locales/views/de.yml
+++ b/config/locales/views/de.yml
@@ -28,3 +28,4 @@ de:
     non_associated: keine verknüpft
     show_linked: verknüpfte %{what} anzeigen
     unknown: unbekannt
+    number_linked: "Anzahl verknüpfter %{what}"
