[view][control] Seals
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/views/deed/de.yml
+++ b/config/locales/views/deed/de.yml
@@ -23,3 +23,4 @@ de:
       no_places: keine Orte genannt
       no_roles: keine Rollen genannt
       none_selected: keine Urkunde ausgewählt
+      no_seals: "nicht besiegelt"
