--- a/config/locales/views/deed/en.yml
+++ b/config/locales/views/deed/en.yml
@@ -22,3 +22,4 @@ en:
       no_places: "no Places"
       no_roles: "no Roles"
       none_selected: "no Deed selected"
+      no_seals: "no Seals attached"
