[model][view][control] directly attach Seals to Deeds
no intermediate model

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/models/seal/de.yml
+++ b/config/locales/models/seal/de.yml
@@ -8,3 +8,11 @@ de:
       seal:
         title: Titel
         notes: Notizen
+        material: Material
+        attachment_type: Befestigung
+        materials:
+          wax: Wachs
+        attachment_types:
+          silk: Seidenfaden
+          hinging: hängend
+          broken: abgebrochen
