--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -22,9 +22,11 @@ en:
       search_for_unassociated: "Search for unassociated %{what}"
       unsaved: "not saved"
       for_deed: "for Deed"
+      for_seal: "for Seal"
     no_description: "no description"
     no_notes: "no notes"
     non_associated: "no linked"
     show_linked: "show linked %{what}"
     unknown: "unknown"
     number_linked: "Number linked %{what}"
+    no_references: "no References given"
