[model][view] References are for 2ndary literature
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/models/reference/de.yml
+++ b/config/locales/models/reference/de.yml
@@ -4,16 +4,11 @@ de:
     attributes:
       reference:
         title: Titel
-        medium: Medium
+        container: In
         year: Jahr
         place: Ort
         authors: Autoren
         notes: Notizen
-        mediums:
-          book: Buch
-          sealbook: Siegelbuch
-          deedbook: Urkundenbuch
-          periodical: Zeitschrift
     models:
       reference:
         one: Referenz
