--- a/config/locales/views/reference/de.yml
+++ b/config/locales/views/reference/de.yml
@@ -8,8 +8,8 @@ de:
         new: "Neue %{what} erstellen"
       none_selected: "keine Referenz ausgewählt"
       no_authors: "keine Autoren"
-      no_medium: "Medium unbekannt"
       no_year: "Jahr unbekannt"
       no_place: "unbekannter Ort"
       no_deeds: "keine Urkunden referenziert"
       no_seals: "keine Siegel referenziert"
+      container_prefix: "in:"
