--- a/config/locales/views/reference/en.yml
+++ b/config/locales/views/reference/en.yml
@@ -13,3 +13,4 @@ en:
       no_place: "unknown Place"
       no_deeds: "no Deeds referenced"
       no_seals: "no Seals referenced"
+      container_prefix: "in:"
