--- a/config/locales/models/reference/en.yml
+++ b/config/locales/models/reference/en.yml
@@ -4,7 +4,7 @@ en:
     attributes:
       reference:
         title: Title
-        medium: Medium
+        container: In
         year: Year
         place: Place
         authors: Authors
