[model][view][control][db] Mention -> MentionEntry
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/config/locales/models/mention_entry/de.yml
+++ b/config/locales/models/mention_entry/de.yml
@@ -2,13 +2,13 @@
 de:
   activerecord:
     attributes:
-      mention:
+      mention_entry:
         deed: Urkunde
         notes: Notizen
         person: Person
         place: Ort
         role: Rolle
     models:
-      mention:
+      mention_entry:
         one: Nennung
         other: Nennungen
