--- a/config/locales/views/deed/en.yml
+++ b/config/locales/views/deed/en.yml
@@ -5,24 +5,24 @@ en:
         add_content: "add new Content"
         add_new_btn_title: "add new Deed"
         add_new_document: "add new Document"
-        add_new_mention: "add new Mention"
+        add_new_mention_entry: "add new MentionEntry"
         add_new_reference: "add new Reference"
         add_new_seal: "add new Seal"
         remove_content: "remove Content"
-        remove_mention: "remove Mention"
+        remove_mention_entry: "remove MentionEntry"
         remove_seal: "remove Seal"
         add_seal: "add new Seal"
         add_new_content: "add new Content"
         remove_reference: "remove Reference"
       flash:
-        removed_mention: "Removed Mention from Deed."
+        removed_mention_entry: "Removed MentionEntry from Deed."
         removed_reference: "Reference for Deed removed"
       modals:
         edit: "Edit %{what}"
         new: "Create new %{what}"
       no_content: "no Content"
       no_documents: "no Documents"
-      no_mentions: "no Mentions"
+      no_mention_entries: "no MentionEntries"
       no_people: "no People"
       no_places: "no Places"
       no_roles: "no Roles"
